# xmonad-config

./: build  install.sh  xmonad-config.cabal  xmonad.hs
James/: Loggers.hs
other/: rofi-config.rasi  rofi-theme.rasi  startup.sh  xmobar.hs
