cabal-version:      2.4
name:               xmonad-config
version:            0.1.0.0
maintainer:         james.hobson@jotron.com
extra-source-files: build
data-dir:           other
data-files:         *.sh,
                    *.hs

executable xmonad-config
    main-is:          xmonad.hs
    other-modules:    Paths_xmonad_config
                      James.Loggers

    default-language: Haskell2010
    build-depends:
        base >=4.14.3.0 && <5.0,
        xmonad,
        xmonad-contrib
